# qt-rhi

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
assets/models/AssaultTroop/: AssaultTroop README.txt
assets/models/grenade/: grenade.fbx  grenade_pbr_asset.blend  grenade_pbr_asset.blend1  grenade_pbr_asset.fbx  untitled.fbx
assets/models/soldier/: soldier.fbx
cuberhiwidget/: examplewidget.cpp
rasterwindow/: CMakeLists.txt
rhi-box/: CMakeLists.txt  RhiFBXModel.h  animation.h  animator.h  bone.h  build-shaders.sh  cube.h  examplewidget.cpp  examplewidget.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.frag  model.h  model.vert  render-item.h  twocubesrhiwidget.cpp  twocubesrhiwidget.h  utils.h
rhi-box/shaders/: cube.vert  lambert.frag  model.frag  model.vert  toon.frag
rhi-box/shaders/prebuild/: cube.vert.qsb  lambert.frag.qsb  model.frag.qsb  model.vert.qsb  toon.frag.qsb
rhi-cube-widget/: CMakeLists.txt  build-shaders.sh  build_shaders.sh  cuberhiwidget.cpp  cuberhiwidget.h  main.cpp  shaders.qrc
rhi-cube-widget/shader_assets/: cube.frag.qsb  cube.vert.qsb
rhi-cube-widget/shaders/: cube.frag  cube.vert
rhi-cube-window/: CMakeLists.txt  cube.h  ibuf.txt  notexture.txt  rhiwindow.cpp  rhiwindow.cpp.autosave  rhiwindow.h  texture.txt
rhi-cube-window/shaders/: texture.frag  texture.vert
rhi-cube-window/shaders/prebuilt/: texture.vert.qsb
rhi-widget/: CMakeLists.txt  cube.cpp  cube.h  cuberhiwidget.cpp  cuberhiwidget.h  main.cpp  model.cpp  model.h  rhiwidget.cpp  rhiwidget.h
rhi-window/: CMakeLists.txt  build-shaders.sh  build_shaders.sh  camera.h  cube.cpp  cube.h  geometry.h  main.cpp  model.cpp  model.h  rhiwindow.cpp  rhiwindow.h  transform.h
rhi-window/qtrhi3d/: apifuturesinfo.h  assimputils.h  camera.cpp  camera.h  fbxmodel.cpp  fbxmodel.h  geometry.h  gpuinfo.h  hdrisky.cpp  hdrisky.h  model.cpp  model.h  proceduralsky.cpp  proceduralsky.h  transform.h  types.h
rhi-window/shaders/: color.frag.hlsl  color.vert.hlsl  depth.vert  equirect2cube.frag  equirect2cube.vert  light.frag  light.vert  mainpbr.frag  mcolor.frag  mcolor.vert  pbr.frag  pbr.vert  pbrd3d.frag  pbrvk.frag  pcgsky.frag  pcgsky.vert  quad.frag  skybox.frag  skybox.vert  texture.frag  texture.vert
rhi-window/shaders/prebuild/: color.frag.qsb  color.vert.qsb  depth.frag.qsb  depth.vert.qsb  equirect2cube.frag.qsb  equirect2cube.vert.qsb  light.frag.qsb  light.vert.qsb  mainpbr.frag.qsb  mcolor.frag.qsb  mcolor.vert.qsb  model.frag.qsb  model.vert.qsb  pbr.frag.qsb  pbr.vert.qsb  pbrd3d.frag.qsb  pbrvk.frag.qsb  pcgsky.frag.qsb  pcgsky.vert.qsb  quad.frag.qsb  quad.vert.qsb  skybox.frag.qsb  skybox.vert.qsb  texture.frag.qsb  texture.vert.qsb
rhi-window/utils/: CMakeLists.txt
rhi-window/utils/src/: colorpicker.cpp  colorpicker.h  jsonutils.cpp  jsonutils.h  logger.cpp  logger.h  stringutils.cpp  stringutils.h  utils.h
samples/: CMakeLists.txt
samples/assimpload/: CMakeLists.txt  fragment.frag  main.cpp  model.h  rhi-widget.cpp  rhi-widget.h  utils.h  vertex.vert
samples/cubemap/: CMakeLists.txt  build_shaders.sh  cubemap.cpp  cubemap.frag  cubemap.frag.qsb  cubemap.vert  cubemap.vert.qsb  equirect_to_cubemap.frag  equirect_to_cubemap.frag.qsb  examplefw.h
samples/cuberhiwidget/: CMakeLists.txt  examplewidget.cpp  main.cpp
samples/rhiwindow/: rhiwindow.cpp  rhiwindow.h
single-cube-window/: CMakeLists.txt  cube.cpp  cube.h  rhiwindow.cpp  rhiwindow.h
single-cube-window/shaders/prebuilt/: texture.vert.qsb
